k8s/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: klaimaet-frontend
spec:
  selector:
    app: klaimaet-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
